--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,7 +20,7 @@ layout: default
 
 <hr>
 
-<nav class="archive-nav">
+<nav class="related">
   <h3>By category</h3>
   {% for tag in page.categories %}
       <strong><a href="{{ site.baseurl }}/{{ tag | slugify }}" class="post-tag">{{ tag }}</a></strong>&nbsp;
