--- a/_includes/post-list.html
+++ b/_includes/post-list.html
@@ -2,12 +2,12 @@
   <!--<a href="{{ post.external_url }}" onclick="sa_event('linked-{{ post.external_url | remove: 'https://' | remove: 'http://' }}');">-->
   <h4>
     <a class="external-link" href="{{ post.external_url }}" onclick="captureOutboundLink(this); return false;">{{ post.title }}</a>&nbsp;
-    <a href="{{ post.url }}"><small><time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%-d %B %Y" }}</time></small></a>&nbsp;
+    <a href="{{ site.baseurl }}/archive/{{ post.date | date: '%Y/%m/%d' }}"><small><time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%-d %B %Y" }}</time></small></a>&nbsp;
     <a href="{{ post.url }}">&#8734;</a>
   </h4>
 {% else %}
   <h4>
-    <a href="{{ post.url }}">{{ post.title }}</a>&nbsp;
+    <a href="{{ site.baseurl }}/archive/{{ post.date | date: '%Y/%m/%d' }}">{{ post.title }}</a>&nbsp;
     <a href="{{ post.url }}"><small><time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%-d %B %Y" }}</time></small></a>
   </h4>
 {% endif %} 
