--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@ layout: default
   {{ content }}
 </article>
 
-{% if page.categories | size > 0 %}
+{% if page.categories.size > 0 %}
   <hr>
 
   <nav class="archive-nav">
