--- a/_includes/post-list.html
+++ b/_includes/post-list.html
@@ -7,7 +7,7 @@
   </h4>
 {% else %}
   <h4>
-    <a href="{{ site.baseurl }}/archive/{{ post.date | date: '%Y/%m/%d' }}">{{ post.title }}</a>&nbsp;
-    <a href="{{ post.url }}"><small><time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%-d %B %Y" }}</time></small></a>
+    <a href="{{ post.url }}">{{ post.title }}</a>&nbsp;
+    <a href="{{ site.baseurl }}/archive/{{ post.date | date: '%Y/%m/%d' }}"><small><time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%-d %B %Y" }}</time></small></a>
   </h4>
 {% endif %} 
