--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
       </footer>
     </div>
   <!-- Privacy friendly website statistics -->
-  <script async defer src="https://api.jden.me/latest.js"></script>
+  <script data-skip-dnt="true" data-mode="hash" async defer src="https://api.jden.me/latest.js"></script>
   <noscript><img src="https://api.jden.me/image.gif" alt=""></noscript>
   </body>
 </html>
