--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,5 +49,10 @@
   <!-- Privacy friendly website statistics -->
   <script data-skip-dnt="true" data-mode="hash" async defer src="https://api.jden.me/latest.js"></script>
   <noscript><img src="https://api.jden.me/image.gif" alt=""></noscript>
+  
+    
+  <script>
+    function externalLinks() {   for(var c = document.getElementsByTagName("a"), a = 0;a < c.length;a++) {     var b = c[a];     b.getAttribute("href") && b.hostname !== location.hostname && (b.target = "_blank")   } } ; externalLinks(); 
+  </script>
   </body>
 </html>
