--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,12 @@
   
     
   <script>
-    function externalLinks() {   for(var c = document.getElementsByTagName("a"), a = 0;a < c.length;a++) {     var b = c[a];     b.getAttribute("href") && b.hostname !== location.hostname && (b.target = "_blank")   } } ; externalLinks(); 
+    function externalLinks() {   
+      for(var c = document.getElementsByTagName("a"), a = 0;a < c.length;a++) {     
+        var b = c[a];
+        b.getAttribute("href") && b.hostname !== location.hostname && (b.target = "_blank") && (b.onclick = "sa_event(hostname);") 
+      } 
+    }; externalLinks(); 
   </script>
   </body>
 </html>
