--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,7 @@
     function externalLinks() {   
       for(var c = document.getElementsByTagName("a"), a = 0;a < c.length;a++) {     
         var b = c[a];
-        b.getAttribute("href") && b.hostname !== location.hostname && (b.target = "_blank" && b.onclick = "sa_event(hostname);")
+        b.getAttribute("href") && b.hostname !== location.hostname && (b.target = "_blank"; b.onclick = "sa_event(hostname);")
       } 
     }; externalLinks(); 
   </script>
