--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,12 +52,28 @@
   
     
   <script>
-    function externalLinks() {   
-      for(var c = document.getElementsByTagName("a"), a = 0;a < c.length;a++) {     
-        var b = c[a];
-        b.getAttribute("href") && b.hostname !== location.hostname && (b.target = "_blank"; b.onclick = "sa_event(hostname);")
-      } 
-    }; externalLinks(); 
+//    function externalLinks() {   
+//      for(var c = document.getElementsByTagName("a"), a = 0;a < c.length;a++) {     
+//        var b = c[a];
+//        b.getAttribute("href") && b.hostname !== location.hostname && (b.target = "_blank"; b.onclick = "sa_event(hostname);")
+//      } 
+//    }; externalLinks(); 
+    
+    
+    function targetBlank() {
+      // remove subdomain of current site's url and setup regex
+      var internal = location.host.replace("www.", "");
+          internal = new RegExp(internal, "i");
+
+      var a = document.getElementsByTagName('a'); // then, grab every link on the page
+      for (var i = 0; i < a.length; i++) {
+        var href = a[i].host; // set the host of each link
+        if( !internal.test(href) ) { // make sure the href doesn't contain current site's host
+          a[i].setAttribute('target', '_blank'); // if it doesn't, set attributes
+          a[i].setAttribute('onclick', sa_event(href);)
+        }
+      }
+    };
   </script>
   </body>
 </html>
