--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,7 +73,7 @@
           a[i].setAttribute('onclick', 'sa_event(' + href + ');');
         }
       }
-    };
+    }; targetBlank();
   </script>
   </body>
 </html>
