--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,7 +70,7 @@
         var href = a[i].host; // set the host of each link
         if( !internal.test(href) ) { // make sure the href doesn't contain current site's host
           a[i].setAttribute('target', '_blank'); // if it doesn't, set attributes
-          a[i].setAttribute('onclick', 'sa_event(outbound_' + href + ');');
+          a[i].setAttribute('onclick', 'sa_event(\'outbound_' + href + '\');');
         }
       }
     }; targetBlank();
