--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ layout: default
   
   <hr>
     <h3>Syndication</h3>
-  <p>This post was orignally posted on <a href="https://tumblr.com">Tumblr</a> on the blog <a href="{{ page.tumblr_website_url }}">{{ page.tumblr }}</a>. View the <a href="{{ page.tumblr_url }}">original post.</a></p>
+  <p>This post was orignally posted on <a href="https://tumblr.com">Tumblr</a> on the blog — <a href="{{ page.tumblr_website_url }}">{{ page.tumblr }}</a>. View the <a href="{{ page.tumblr_url }}">original post.</a></p>
   <hr>
   
   {% endif %}
