--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,9 +17,8 @@ layout: default
   
   {% if page.tumblr_url %}
   
-  <hr>
-    <h3>Syndication</h3>
-  <p>This post was orignally posted on <a href="https://tumblr.com">Tumblr</a> on the blog — <a href="{{ page.tumblr_website_url }}">{{ page.tumblr }}</a>. View the <a href="{{ page.tumblr_url }}">original post.</a></p>
+  <h3>Syndication</h3>
+  <p>This post was orignally posted on <a href="https://tumblr.com">Tumblr</a> on the blog: <a href="{{ page.tumblr_website_url }}">{{ page.tumblr }}</a>. View the <a href="{{ page.tumblr_url }}">original post.</a></p>
   <hr>
   
   {% endif %}
