--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -14,6 +14,7 @@ code {
   color: $code-color;
   background-color: #f9f9f9;
   border-radius: 3px;
+  white-space: pre-wrap;
 }
 
 pre {
@@ -27,6 +28,7 @@ pre code {
   font-size: 100%;
   color: inherit;
   background-color: transparent;
+  white-space: pre-wrap;
 }
 
 // Pygments via Jekyll
