--- a/_layouts/category-archive.html
+++ b/_layouts/category-archive.html
@@ -4,11 +4,11 @@ layout: archive
 
 <h2>By category</h2>
 
-<nav class="archive-nav"><strong><a href="{{site.baseurl }}/category/{{ page.title }}">{{ page.title }}</a></strong></nav>
+<nav class="archive-nav"><strong><a href="{{site.baseurl }}/archive/category/{{ page.title }}">{{ page.title }}</a></strong></nav>
 
 <hr>
 
-<h3><a href="{{ site.baseurl }}/category/{{ page.title }}">{{ page.title }}</a></h3>
+<h3><a href="{{ site.baseurl }}/archive/category/{{ page.title }}">{{ page.title }}</a></h3>
 
   <ul class="related-posts" aria-label="posts classified under {{ page.title }}">
   {% for post in page.posts %}
