--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -6,7 +6,7 @@ layout: default
 
 <hr>
 
-<p>Filter the archive by: <a href="{{ site.baseurl }}/archive">year</a>, <a href="{{ site.baseurl }}/category">category</a>, or by <a href="{{ site.baseurl }}/archive/tag">tag</a>.</p>
+<p>Filter the archive by: <a href="{{ site.baseurl }}/archive">year</a>, <a href="{{ site.baseurl }}/archive/category">category</a>, or by <a href="{{ site.baseurl }}/archive/tag">tag</a>.</p>
 
 <hr>
 
