--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,7 +20,7 @@ layout: default
   <hr>
   
   <h3>Syndication</h3>
-  <p>This post was orignally posted on <a href="https://tumblr.com">Tumblr</a> on the blog: <a href="{{ page.tumblr_website_url }}">{{ page.tumblr }}</a>. View the <a href="{{ site.baseurl }}/{{ page.tumblr | slugify }}">full syndicated blog</a>.  View the <a href="{{ page.tumblr_url }}">original post.</a></p>
+  <p>This post was orignally posted on <a href="https://tumblr.com">Tumblr</a> on the blog: <a href="{{ page.tumblr_website_url }}">{{ page.tumblr }}</a>. View the <a href="{{ site.baseurl }}/{{ page.tumblr | slugify }}">full syndicated blog</a> or view the <a href="{{ page.tumblr_url }}">original post.</a></p>
   <hr>
   
   {% endif %}
