--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: default
     {% endif %}
   </h1>
 
-  <a class="post-date" href="{{ site.baseurl }}/archive/{{ page.date | date: '%Y/%m/%d' }}"><time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%A %-d %B %Y" }}</time></a>
+  <a class="post-date" href="{{ site.baseurl }}/archive/{{ page.date | date: '%Y/%m/%d' }}"><time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%A, %-d %B %Y at %l:%M %P" }}</time></a>
   
   {% if page.tumblr_url %}
   
