--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,31 +49,26 @@
   <!-- Privacy friendly website statistics -->
   <script data-skip-dnt="true" data-mode="hash" async defer src="https://api.jden.me/latest.js"></script>
   <noscript><img src="https://api.jden.me/image.gif" alt=""></noscript>
-  
-    
-  <script>
-//    function externalLinks() {   
-//      for(var c = document.getElementsByTagName("a"), a = 0;a < c.length;a++) {     
-//        var b = c[a];
-//        b.getAttribute("href") && b.hostname !== location.hostname && (b.target = "_blank"; b.onclick = "sa_event(hostname);")
-//      } 
-//    }; externalLinks(); 
-    
-    
-    function targetBlank() {
-      // remove subdomain of current site's url and setup regex
-      var internal = location.host.replace("www.", "");
-          internal = new RegExp(internal, "i");
 
-      var a = document.getElementsByTagName('a'); // then, grab every link on the page
+  <script>
+    (function createEvents() {
+      // Get all links on the page
+      var a = document.getElementsByTagName("a");
+
+      // Loop over all links on the page
       for (var i = 0; i < a.length; i++) {
-        var href = a[i].host; // set the host of each link
-        if( !internal.test(href) ) { // make sure the href doesn't contain current site's host
-          a[i].setAttribute('target', '_blank'); // if it doesn't, set attributes
-          a[i].setAttribute('onclick', 'sa_event(\'outbound_' + href + '\');');
+        var link = a[i]
+
+        // Test is a link does start with http
+        if (/^http/i.test(link.href)) {
+
+          // Set event name with host of link without the www
+          var event = "outbound_" + link.host.replace(/^www\./, "");
+          link.setAttribute("target", "_blank");
+          link.setAttribute("onclick", "sa_event('" + event + "');");
         }
       }
-    }; targetBlank();
+    })();
   </script>
   </body>
 </html>
