--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,6 @@
   <script data-skip-dnt="true" data-mode="hash" async defer src="https://api.jden.me/latest.js"></script>
   <noscript><img src="https://api.jden.me/image.gif" alt=""></noscript>
 
-<!--
   <script>
     (function createEvents() {
       // Get all links on the page
@@ -64,13 +63,12 @@
         if (/^http/i.test(link.href)) {
 
           // Set event name with host of link without the www
-          var event = "outbound_" + link.host.replace(/[^a-z0-9]+/gi, "_");
+          var event = "outbound_" + link.host.replace(replace(/^www\./, "") + link.pathname.replace(/[^a-z0-9]+/gi, "_");
           link.setAttribute("target", "_blank");
           link.setAttribute("onclick", "sa_event('" + event + "');");
         }
       }
     })();
   </script>
--->
   </body>
 </html>
