--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,24 +51,43 @@
   <noscript><img src="https://api.jden.me/image.gif" alt=""></noscript>
 
   <script>
-(function createEvents() {
-  // Get all links on the page
-  var a = document.getElementsByTagName("a");
+    (function createEvents() {
+      // Get all links on the page
+      var a = document.getElementsByTagName("a");
+      
+      // remove subdomain of current site's url and setup regex
+      var internal = location.host.replace("www.", "");
+          internal = new RegExp(internal, "i");
 
-  // Loop over all links on the page
-  for (var i = 0; i < a.length; i++) {
-    var link = a[i]
+      // Loop over all links on the page
+      for (var i = 0; i < a.length; i++) {
+        var link = a[i]
 
-    // Test is a link does start with http
-    if (/^http/i.test(link.href)) {
+        // Test is a link does start with http
+        if (/^http/i.test(link.href) && !internal.test(href)) {
 
-      // Set event name with host of link without the www
-      var event = "outbound_" + link.host.replace(/^www\./, "");
-      link.setAttribute("target", "_blank");
-      link.setAttribute("onclick", "sa_event('" + event + "');");
-    }
-  }
-})();
+          // Set event name with host of link without the www
+          var event = "outbound_" + link.host.replace(/^www\./, "");
+          link.setAttribute("target", "_blank");
+          link.setAttribute("onclick", "sa_event('" + event + "');");
+        }
+      }
+    })();
+    
+//        function targetBlank() {
+//      // remove subdomain of current site's url and setup regex
+//      var internal = location.host.replace("www.", "");
+//          internal = new RegExp(internal, "i");
+//
+//      var a = document.getElementsByTagName('a'); // then, grab every link on the page
+//      for (var i = 0; i < a.length; i++) {
+//        var href = a[i].host; // set the host of each link
+//        if( !internal.test(href) ) { // make sure the href doesn't contain current site's host
+//          a[i].setAttribute('target', '_blank'); // if it doesn't, set attributes
+//          a[i].setAttribute('onclick', 'sa_event(\'outbound_' + href + '\');');
+//        }
+//      }
+//    }; targetBlank();
 
   </script>
   </body>
