--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,12 +62,17 @@
       // Loop over all links on the page
       for (var i = 0; i < a.length; i++) {
         var link = a[i]
-
+          
+        if (link.className == download) {
+          var event = "download_" + link.pathname.replace(/[^a-z0-9]+/gi, "_");
+          link.setAttribute("target", "_blank");
+          link.setAttribute("onclick", "sa_event('" + event + "');");
+        }
         // Test is a link does start with http
-        if (/^http/i.test(link.href) && !internal.test(link.href)) {
+        else if (/^http/i.test(link.href) && !internal.test(link.href)) {
 
           // Set event name with host of link without the www
-          var event = "outbound_" + link.host.replace(/^(?:https?:\/\/)?(?:www\.)?/i, "") + link.pathname;
+          var event = "outbound_" + link.host.replace(/^(?:https?:\/\/)?(?:www\.)?/i, "") + link.pathname.replace(/[^a-z0-9]+/gi, "_");
           link.setAttribute("target", "_blank");
           link.setAttribute("onclick", "sa_event('" + event + "');");
         }
