--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,7 +64,7 @@
         var link = a[i]
           
         if (link.className === "download") {
-          var event = "download_" + link.pathname.replace(/[^a-z0-9]+/gi, "_");
+          var event = "download_" + link.pathname.split("/").pop().replace(/[^a-z0-9]+/gi, "_");
           link.setAttribute("target", "_blank");
           link.setAttribute("onclick", "sa_event('" + event + "');");
         } else if (/^http/i.test(link.href) && !internal.test(link.href)) {
