--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,8 +56,10 @@
       var a = document.getElementsByTagName("a");
       
       // remove subdomain of current site's url and setup regex
-      var internal = location.host.replace("www.", "");
-          internal = new RegExp(internal, "i");
+//      var internal = location.host.replace("www.", "");
+//          internal = new RegExp(internal, "i");
+        var internal = new RegExp(location.host.replace("www.", ""), "i");
+//          internal = new RegExp(internal, "i");
 
       // Loop over all links on the page
       for (var i = 0; i < a.length; i++) {
@@ -78,27 +80,11 @@
         }
         // Email
         else if (/^mailto:/i.test(link.href)) {
-          var event = "email_" + link.href.split(":").pop();
+          var event = "email_" + link.href.split(":").pop().replace(/[^a-z0-9]+/gi, "_");
           link.setAttribute("onclick", "sa_event('" + event + "');");
         } 
       }
     })();
-    
-//        function targetBlank() {
-//      // remove subdomain of current site's url and setup regex
-//      var internal = location.host.replace("www.", "");
-//          internal = new RegExp(internal, "i");
-//
-//      var a = document.getElementsByTagName('a'); // then, grab every link on the page
-//      for (var i = 0; i < a.length; i++) {
-//        var href = a[i].host; // set the host of each link
-//        if( !internal.test(href) ) { // make sure the href doesn't contain current site's host
-//          a[i].setAttribute('target', '_blank'); // if it doesn't, set attributes
-//          a[i].setAttribute('onclick', 'sa_event(\'outbound_' + href + '\');');
-//        }
-//      }
-//    }; targetBlank();
-
   </script>
   </body>
 </html>
