--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
         <nav id="top-level">
             <ul>
                 <h3 class="masthead-title">
-                    <li><a class="left" href="{{ site.url }}" title="Home">
+                    <li><a class="left" href="/" title="Home">
                         {% if page.non-blog %}
                           {{ site.title }}
                         {% else %}
