--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
         
       <footer class="footer">
         <small>
-          &copy; <time datetime="{{ site.time | date_to_xmlschema }}">{{ site.time | date: '%Y' }}</time>. All rights reserved.
+          &copy; 2010 - <time datetime="{{ site.time | date_to_xmlschema }}">{{ site.time | date: '%Y' }}</time>. All rights reserved.
             <p>Made in <a href="http://southaustralia.com"><img src="/content/images/favicon-32x32.png" style="-webkit-transform: translateX(0); -ms-transform: translateX(0); transform: translateX(0);display: inline-block; padding: 0; left: 0; height: 1.5em; margin-bottom: -0.25em;"></a> by <a href="http://jden.me">jden redden</a> with &#10084;&#65039;.</p>
         </small>
       </footer>
@@ -49,6 +49,6 @@
   <!-- Privacy friendly website statistics -->
   <script data-skip-dnt="true" data-mode="hash" async defer src="https://api.jden.me/latest.js"></script>
   <noscript><img src="https://api.jden.me/image.gif" alt=""></noscript>
-  <script src="scripts.js"></script>
+  <script src="/scripts.js"></script>
   </body>
 </html>
