--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -43,7 +43,8 @@ layout: default
 
 <hr>
 
-{% assign posts = site.posts | where_exp:"post", "post.url != page.url" | sample:3 %}
+<!--{% assign posts = site.posts | where_exp:"post", "post.url != page.url" | sample:3 %}-->
+{% assign posts = site.related_posts limit:3 %}
 <aside class="related">
   <h3>Related posts</h3>
   <ul class="related-posts">
