--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -43,15 +43,18 @@ layout: default
 
 <hr>
 
+{% if page.hidden != true %}
 <!--{% assign posts = site.posts | where_exp:"post", "post.url != page.url" | sample:3 %}-->
-{% assign posts = site.related_posts limit:3 %}
+{% assign postsNotHidden = site.posts | where_exp: "item", "item.hidden != true" %}
+{% assign posts = postsNotHidden.related_posts %}
 <aside class="related">
   <h3>Related posts</h3>
   <ul class="related-posts">
-  {% for post in posts %}
+  {% for post in posts limit:3 %}
     <li class="archive-posts">
       {% include post-list.html %}
     </li>
   {% endfor %}
   </ul>
 </aside>
+{% endif %}
