--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -45,8 +45,8 @@ layout: default
 
 {% if page.hidden != true %}
 <!--{% assign posts = site.posts | where_exp:"post", "post.url != page.url" | sample:3 %}-->
-{% assign postsNotHidden = site.posts | where_exp: "item", "item.hidden != true" %}
-{% assign posts = postsNotHidden.related_posts %}
+<!--{% assign postsNotHidden = site.posts | where_exp: "item", "item.hidden != true" %}-->
+{% assign posts = site.related_posts %}
 <aside class="related">
   <h3>Related posts</h3>
   <ul class="related-posts">
