--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,28 +11,27 @@
   </title>
 
   <link rel="stylesheet" href="/styles.css">
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}/public/apple-touch-icon-precomposed.png">
-  <link rel="shortcut icon" href="{{ site.baseurl }}/public/favicon.ico">
-  <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ site.baseurl }}/atom.xml">
+  
+  <link rel="apple-touch-icon" sizes="57x57" href="/content/images/favicons/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/content/images/favicons/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/content/images/favicons/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/content/images/favicons/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/content/images/favicons/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/content/images/favicons/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/content/images/favicons/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/content/images/favicons/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/content/images/favicons/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="/content/images/favicons/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/content/images/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/content/images/favicons/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/content/images/favicons/favicon-16x16.png">
+  <link rel="manifest" href="/content/images/favicons/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/content/images/favicons/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
+
+  <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="/atom.xml">
   
   <script>window.sa_event=window.sa_event||function(){a=[].slice.call(arguments);sa_event.q?sa_event.q.push(a):sa_event.q=[a]};</script>
   
-  <script>
-  function captureOutboundLink(element) {
-    var timeout = 0;
-    if (element && window.sa_event) {
-      var href = element.getAttribute("href");
-      var hostname = href.indexOf("://") ? href.split("/")[2] : href;
-      var event = "outbound_" + hostname.replace(/[^a-z0-9]+/gi, "_");
-      sa_event(event);
-      console.info(
-        "Simple Analytics: captured outbound link as event: " + event
-      );
-      timeout = 250;
-    }
-    window.setTimeout(function () {
-      document.location = href;
-    }, timeout);
-  }
-</script>
 </head>
