--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -131,5 +131,5 @@ a[href^="#fnref:"] {
 @font-face {
   font-family: "San Francisco";
   font-weight: 400;
-  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.woff");
+  src: url("/content/fonts/sanfranciscodisplay-regular-webfont.woff");
 }
