URL Fix + truncated posts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,11 +24,11 @@
                         {% endif %}
                         </a></li>
                     <small>
-                        <li><a href="/blog">blog</a></li>
-                        <li><a href="/blog/archive">archive</a></li>
-                        <li><a href="/projects">projects</a></li>
-                        <li><a href="/cv">cv</a></li>                        
-                        <li><a href="/about">about</a></li>
+                        <li><a href="/blog/">blog</a></li>
+                        <li><a href="/blog/archive/">archive</a></li>
+                        <li><a href="/projects/">projects</a></li>
+                        <li><a href="/cv/">cv</a></li>                        
+                        <li><a href="/about/">about</a></li>
                     </small>
                 </h3>
             </ul>
