--- a/_layouts/day-archive.html
+++ b/_layouts/day-archive.html
@@ -5,22 +5,22 @@ layout: archive
 <nav class="archive-nav" aria-label="year">
   <h2 class="archive-header">By year</h2>
   
-  <strong><a href="{{ site.baseurl }}/archive/{{ page.date | date: '%Y' }}">{{ page.date | date: '%Y' }}</a></strong>
+  <strong><a href="{{ site.baseurl }}/archive/{{ page.date | date: '%Y' }}/">{{ page.date | date: '%Y' }}</a></strong>
     
   <h3 class="archive-header">By month</h3>
-  <strong><a href="{{ site.baseurl }}/archive/{{ page.date | date: '%Y/%m' }}">{{ page.date | date: '%B' }}</a></strong>
+  <strong><a href="{{ site.baseurl }}/archive/{{ page.date | date: '%Y/%m' }}/">{{ page.date | date: '%B' }}</a></strong>
       
   <h4 class="archive-header">By day</h4>
-  <strong><a href="{{ site.baseurl }}/archive/{{ page.date | date: '%Y/%m/%d' }}">{{ page.date | date: '%d' }}</a></strong>
+  <strong><a href="{{ site.baseurl }}/archive/{{ page.date | date: '%Y/%m/%d' }}/">{{ page.date | date: '%d' }}</a></strong>
 </nav>
 
 <hr>
 
-<h2 id="{{ page.date | date: '%Y' }}"><a href="{{ site.baseurl }}/archive/{{ page.date | date: '%Y' }}">{{ page.date | date: '%Y' }}</a></h2>
+<h2 id="{{ page.date | date: '%Y' }}"><a href="{{ site.baseurl }}/archive/{{ page.date | date: '%Y' }}/">{{ page.date | date: '%Y' }}</a></h2>
 
-<h3><a href="{{ site.baseurl }}/archive/{{ page.date | date: '%Y/%m' }}">{{ page.date | date: '%B' }}</a></h3>
+<h3><a href="{{ site.baseurl }}/archive/{{ page.date | date: '%Y/%m' }}/">{{ page.date | date: '%B' }}</a></h3>
 
-<h4><a href="{{ site.baseurl }}/archive/{{ page.date | date: '%Y/%m/%d' }}">{{ page.date | date: '%d' }}</a></h4>
+<h4><a href="{{ site.baseurl }}/archive/{{ page.date | date: '%Y/%m/%d' }}/">{{ page.date | date: '%d' }}</a></h4>
 
 <ul class="related-posts">
   {% for post in page.posts %}
