--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,10 +6,10 @@ layout: default
   
   <h1 class="post-title">
     {% if page.external_url %}
-      <a class="external-link" href="{{ page.external_url }}/">{{ page.title }}</a>&nbsp;
-      <a href="{{ page.url }}/">&#8734;</a>
+      <a class="external-link" href="{{ page.external_url }}">{{ page.title }}</a>&nbsp;
+      <a href="{{ page.url }}">&#8734;</a>
     {% else %}
-    <a href="{{ page.url }}/">{{ page.title }}</a>
+    <a href="{{ page.url }}">{{ page.title }}</a>
     {% endif %}
   </h1>
 
@@ -20,7 +20,7 @@ layout: default
   <hr>
   
   <h3><a href="{{ site.baseurl }}/syndication/">Syndication</a></h3>
-  <p>This post was orignally posted on <a href="https://tumblr.com">Tumblr</a> on the blog: <a href="{{ page.tumblr_website_url }}">{{ page.tumblr }}</a>. View the <a href="{{ site.baseurl }}/{{ page.tumblr | slugify }}/">full syndicated blog</a> or view the <a href="{{ page.tumblr_url }}/">original post.</a></p>
+  <p>This post was orignally posted on <a href="https://tumblr.com">Tumblr</a> on the blog: <a href="{{ page.tumblr_website_url }}">{{ page.tumblr }}</a>. View the <a href="{{ site.baseurl }}/syndication/{{ page.tumblr | slugify }}/">full syndicated blog</a> or view the <a href="{{ page.tumblr_url }}">original post.</a></p>
   <hr>
   
   {% endif %}
